<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hippo.preference.SwitchPreference
        android:defaultValue="@bool/beta"
        android:key="save_parse_error_body"
        android:summary="@string/settings_advanced_save_parse_error_body_summary"
        android:title="@string/settings_advanced_save_parse_error_body" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="save_crash_log"
        android:summary="@string/settings_advanced_save_crash_log_summary"
        android:title="@string/settings_advanced_save_crash_log" />

    <Preference
        android:key="dump_logcat"
        android:summary="@string/settings_advanced_dump_logcat_summary"
        android:title="@string/settings_advanced_dump_logcat"
        app:allowDividerAbove="true" />

    <com.hippo.ehviewer.preference.ClearDownloadPathCachePreference
        android:key="clear_download_path_cache"
        android:summary="@string/settings_advanced_clear_download_path_cache_summary"
        android:title="@string/settings_advanced_clear_download_path_cache"
        app:allowDividerAbove="true" />

    <Preference
        android:key="clear_memory_cache"
        android:summary="@string/settings_advanced_clear_memory_cache_summary"
        android:title="@string/settings_advanced_clear_memory_cache"
        app:allowDividerAbove="true" />

    <com.hippo.preference.ListPreference
        android:defaultValue="160"
        android:key="read_cache_size"
        android:summary="%s"
        android:title="@string/settings_advanced_read_cache_size"
        app:allowDividerAbove="true"
        app:entries="@array/read_cache_size_entries"
        app:entryValues="@array/read_cache_size_entry_values" />

    <com.hippo.preference.ListPreference
        android:defaultValue="system"
        android:key="app_language"
        android:summary="%s"
        android:title="@string/settings_advanced_app_language_title"
        app:allowDividerAbove="true"
        app:entries="@array/app_language_entries"
        app:entryValues="@array/app_language_entry_values" />

    <!--    <com.hippo.preference.SwitchPreference-->
    <!--        android:defaultValue="false"-->
    <!--        android:key="url_replace"-->
    <!--        android:summary="@string/settings_advanced_url_replace_summary"-->
    <!--        android:title="@string/settings_advanced_url_replace_title" />-->


    <!-- LANraragi: removed export_data, import_data, wifi_server, wifi_client -->


</PreferenceScreen>
